--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,14 +1,12 @@
-@import './variables/global';
-@import 'reset';
-@import './themes/dark';
-@import './themes/normal';
+@import "./variables/global";
+@import "reset";
+@import "./themes/dark";
+@import "./themes/normal";
 
 .app {
     font-size: var(--font-m);
-
     background: var(--bg-color);
     color: var(--primary-color);
-
     min-height: 100vh;
 }
 
@@ -18,6 +16,5 @@
 
 .page-wrapper {
     flex-grow: 1;
-
     padding: 20px;
 }
